name:             cube-cotillion
version:          0.1.0.0
-- synopsis:
-- description:
license:          BSD3
license-file:     LICENSE
author:           Getty Ritter <gdritter@galois.com>
maintainer:       Getty Ritter <gdritter@galois.com>
copyright:        ©2016 Getty Ritter
category:         Network
build-type:       Simple
cabal-version:    >= 1.12

flag build-example
  description: Build example application
  default:     False

library
  exposed-modules:     Network.CubeCotillion
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <4.9, bytestring, ssh-hans, monadLib, network, transformers
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings,
                       ScopedTypeVariables

executable hello
  if !flag(build-example)
    buildable:      False
  main-is:          hello.hs
  hs-source-dirs:   example
  build-depends:    base, cube-cotillion
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

executable accumulator
  if !flag(build-example)
    buildable:      False
  main-is:          accumulator.hs
  hs-source-dirs:   example
  build-depends:    base, cube-cotillion, transformers
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
